# spacecurves

./: .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  conda_build_config.yaml  meta.yaml  noxfile.py  pixi.toml  pyproject.toml  recipe.yaml  requirements-dev.txt  setup.cfg  setup.py  tox.ini  tox.toml
.github/workflows/: workflow.yml
recipe/: meta.yaml
spacecurves/: __init__.py  _version.py  spacecurves.py
